not building yet

--- a/Simulator/src/ros_interface/CMakeLists.txt
+++ b/Simulator/src/ros_interface/CMakeLists.txt
@@ -86,9 +86,9 @@ include_directories(
 add_library(airsim_settings_parser src/airsim_settings_parser.cpp)
 target_link_libraries(airsim_settings_parser ${catkin_LIBRARIES} AirLib)
 
-add_library(pd_position_controller_simple src/pd_position_controller_simple.cpp)
-add_dependencies(pd_position_controller_simple ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(pd_position_controller_simple ${catkin_EXPORTED_TARGETS})
+# add_library(pd_position_controller_simple src/pd_position_controller_simple.cpp)
+# add_dependencies(pd_position_controller_simple ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(pd_position_controller_simple ${catkin_EXPORTED_TARGETS})
 
 add_library(airsim_ros src/airsim_ros_wrapper.cpp)
 add_dependencies(airsim_ros ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
@@ -97,19 +97,19 @@ target_link_libraries(airsim_ros ${catkin_LIBRARIES} ${OpenCV_LIBS} yaml-cpp Air
 add_executable(airsim_node src/airsim_node.cpp)
 target_link_libraries(airsim_node airsim_ros ${catkin_LIBRARIES} AirLib)
 
-add_executable(pd_position_controller_simple_node src/pd_position_controller_simple_node.cpp)
-target_link_libraries(pd_position_controller_simple_node pd_position_controller_simple airsim_ros ${catkin_LIBRARIES} AirLib)
+# add_executable(pd_position_controller_simple_node src/pd_position_controller_simple_node.cpp)
+# target_link_libraries(pd_position_controller_simple_node pd_position_controller_simple airsim_ros ${catkin_LIBRARIES} AirLib)
 
-install(TARGETS
-    #list of nodes
-    pd_position_controller_simple_node
-    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+# install(TARGETS
+#     #list of nodes
+#     pd_position_controller_simple_node
+#     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
 
 install(TARGETS 
     #list of shared libraries
     airsim_ros
-    pd_position_controller_simple
+    # pd_position_controller_simple
     ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
