--- a/UE4Project/Plugins/AirSim/Settings/settings.json
+++ b/UE4Project/Plugins/AirSim/Settings/settings.json
@@ -12,7 +12,7 @@
       "EnableCollisions": true,
       "AllowAPIAlways": true,
       "RC": {
-        "RemoteControlID": -1 // keyboard mode (will switch to API once ROS connection is established)
+        "RemoteControlID": -1
       },
       "Sensors": {
         "Imu": {
