update rviz file and remove debug points

--- a/UE4Project/Plugins/AirSim/Settings/settings.json
+++ b/UE4Project/Plugins/AirSim/Settings/settings.json
@@ -31,7 +31,7 @@
           "X": 0,
           "Y": 0,
           "Z": -0.1,
-          "DrawDebugPoints": true
+          "DrawDebugPoints": false
         }
       },
       "Cameras": {
