--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -1,14 +1,14 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FlyingCPP/Maps/FlyingExampleMap
+EditorStartupMap=/Game/RaceCourse/Maps/IM_MAP1.IM_MAP1
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FlyingCPP/Maps/FlyingExampleMap
+GameDefaultMap=/Game/RaceCourse/Maps/IM_MAP1.IM_MAP1
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Blocks.BlocksGameMode
+GlobalDefaultGameMode=/Script/AirSim.AirSimGameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -67,5 +67,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
