--- a/Simulator/src/ros_interface/CMakeLists.txt
+++ b/Simulator/src/ros_interface/CMakeLists.txt
@@ -80,9 +80,6 @@ include_directories(
 add_library(airsim_settings_parser src/airsim_settings_parser.cpp)
 target_link_libraries(airsim_settings_parser ${catkin_LIBRARIES} AirLib)
 
-add_library(joycontrol src/joystick.cpp)
-target_link_libraries(joycontrol ${catkin_LIBRARIES})
-
 # add_library(pd_position_controller_simple src/pd_position_controller_simple.cpp)
 # add_dependencies(pd_position_controller_simple ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 # add_dependencies(pd_position_controller_simple ${catkin_EXPORTED_TARGETS})
@@ -93,6 +90,9 @@ target_link_libraries(airsim_ros ${catkin_LIBRARIES} ${OpenCV_LIBS} yaml-cpp Air
 
 add_executable(airsim_node src/airsim_node.cpp)
 target_link_libraries(airsim_node airsim_ros ${catkin_LIBRARIES} AirLib)
+
+add_executable(joycontrol src/joystick.cpp)
+target_link_libraries(joycontrol ${catkin_LIBRARIES})
 
 # add_executable(pd_position_controller_simple_node src/pd_position_controller_simple_node.cpp)
 # target_link_libraries(pd_position_controller_simple_node pd_position_controller_simple airsim_ros ${catkin_LIBRARIES} AirLib)
