--- a/Simulator/src/airsim_ros_interface/CMakeLists.txt
+++ b/Simulator/src/airsim_ros_interface/CMakeLists.txt
@@ -44,9 +44,7 @@ add_message_files(
 
 add_service_files(
   FILES
-  SetGPSPosition.srv
   Reset.srv
-  SetLocalPosition.srv
 )
 
 generate_messages(
@@ -71,8 +69,8 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
 )
 
-add_library(airsim_settings_parser src/airsim_settings_parser.cpp)
-target_link_libraries(airsim_settings_parser ${catkin_LIBRARIES} AirLib)
+# add_library(airsim_settings_parser src/airsim_settings_parser.cpp)
+# target_link_libraries(airsim_settings_parser ${catkin_LIBRARIES} AirLib)
 
 # add_library(pd_position_controller_simple src/pd_position_controller_simple.cpp)
 # add_dependencies(pd_position_controller_simple ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
