add gps to settings.json

--- a/UE4Project/Plugins/AirSim/Settings/settings.json
+++ b/UE4Project/Plugins/AirSim/Settings/settings.json
@@ -19,6 +19,10 @@
             "SensorType": 2,
             "Enabled": true
           },
+          "Gps" : {
+            "SensorType": 3,
+            "Enabled": true
+          },
           "LidarCustom": {
             "SensorType": 6,
             "Enabled": true,
