--- a/Simulator/src/airsim_ros_interface/package.xml
+++ b/Simulator/src/airsim_ros_interface/package.xml
@@ -4,9 +4,9 @@
   <version>0.0.1</version>
   <description>FSOnline ROS Wrapper over AirSim's C++ car client library</description>
 
-  <maintainer email="davidoort@hotmail.com">David Oort Alonso</maintainer>
+  <maintainer email="autonomy@fsteamdelft.nl">David Oort Alonso</maintainer>
 
-  <license>MIT</license>
+  <license>GPLv2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
