--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,15 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a set of commands using the runners shell
-    - name: Setup catkin
+    - name: Setup ROS
       uses: betwo/github-setup-catkin@v1.0.0
       with:
         # Version range or exact version of ROS version to use, using SemVer's version range syntax.
         ros-version: # optional, default is melodic
         # Root directory of the catkin workspace
         workspace: ./Simulator 
+    - name: Install catkin tools
+      run: sudo apt-get install python-catkin-tools
     - name: Build catkin ws
       run: |
         set -ex o pipefail
