--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -44,5 +44,5 @@ jobs:
     - name: Build catkin ws
       run: |
         set -ex o pipefail
-        catkin build airsim_ros_interface
+        catkin build 
       working-directory: ./Simulator 
