--- a/ros/src/fsds_ros_bridge/CMakeLists.txt
+++ b/ros/src/fsds_ros_bridge/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(airsim_ros_interface)
+project(fsds_ros_bridge)
 
 # set this to path to AirSim root folder if you want your catkin workspace in a custom directory
 set(AIRSIM_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../../../AirSim/)
@@ -29,7 +29,6 @@ find_package(catkin REQUIRED COMPONENTS
   mavros_msgs
   message_generation
   nav_msgs
-  joy
   roscpp
   rospy
   sensor_msgs
@@ -83,11 +82,8 @@ add_library(airsim_ros src/airsim_ros_wrapper.cpp)
 add_dependencies(airsim_ros ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(airsim_ros ${catkin_LIBRARIES} ${OpenCV_LIBS} yaml-cpp AirLib airsim_settings_parser)
 
-add_executable(airsim_node src/airsim_node.cpp)
-target_link_libraries(airsim_node airsim_ros ${catkin_LIBRARIES} AirLib)
-
-add_executable(joycontrol src/joystick.cpp)
-target_link_libraries(joycontrol ${catkin_LIBRARIES})
+add_executable(fsds_bridge src/fsds_bridge.cpp)
+target_link_libraries(fsds_bridge airsim_ros ${catkin_LIBRARIES} AirLib)
 
 
 install(TARGETS 
