--- a/UE4Project/Plugins/AirSim/Settings/settings.json
+++ b/UE4Project/Plugins/AirSim/Settings/settings.json
@@ -35,58 +35,18 @@
           }
         },
         "Cameras": {
-          "front_center_custom": {
+          "cam1": {
             "CaptureSettings": [
               {
                 "PublishToRos": 1,
                 "ImageType": 0,
                 "Width": 640,
                 "Height": 480,
-                "FOV_Degrees": 27,
-                "DepthOfFieldFstop": 2.8,
-                "DepthOfFieldFocalDistance": 200.0, 
-                "DepthOfFieldFocalRegion": 200.0,
-                "TargetGamma": 1.5
+                "FOV_Degrees": 30
               }
             ],
             "X": 0.50, "Y": 0, "Z": 0.10,
             "Pitch": 0, "Roll": 0, "Yaw": 0
-          },
-          "front_left_custom": {
-            "CaptureSettings": [
-              {
-                "PublishToRos": 1,
-                "ImageType": 0,
-                "Width": 672,
-                "Height": 376,
-                "FOV_Degrees": 90,
-                "TargetGamma": 1.5
-              }, 
-              {
-                "PublishToRos": 1,
-                "ImageType": 1,
-                "Width": 672,
-                "Height": 376,
-                "FOV_Degrees": 90,
-                "TargetGamma": 1.5
-              }
-            ],
-            "X": 0.50, "Y": -0.06, "Z": 0.10,
-            "Pitch": 0.0, "Roll": 0.0, "Yaw": 0.0
-          },
-          "front_right_custom": {
-            "CaptureSettings": [
-              {
-                "PublishToRos": 1,
-                "ImageType": 0,
-                "Width": 672,
-                "Height": 376,
-                "FOV_Degrees": 90,
-                "TargetGamma": 1.5
-              }
-            ],
-            "X": 0.50, "Y": 0.06, "Z": 0.10,
-            "Pitch": 0.0, "Roll": 0.0, "Yaw": 0.0
           }
         },
         "X": 2, "Y": 0, "Z": 0,
@@ -94,8 +54,6 @@
       }
     },
     "SubWindows": [
-      {"WindowID": 0, "ImageType": 0, "CameraName": "front_left_custom", "Visible": true},
-      {"WindowID": 1, "ImageType": 0, "CameraName": "front_center_custom", "Visible": false},
-      {"WindowID": 2, "ImageType": 0, "CameraName": "front_right_custom", "Visible": true}
+      {"WindowID": 0, "ImageType": 0, "CameraName": "cam1", "Visible": true}
     ]
 }
