GO and FINISHED signals

--- a/ros/src/fsds_ros_bridge/CMakeLists.txt
+++ b/ros/src/fsds_ros_bridge/CMakeLists.txt
@@ -40,8 +40,8 @@ add_message_files(
   FILES
   GPSYaw.msg
   ControlCommand.msg
-  GreenFlag.msg
-  ASMissionFinished.msg
+  GoSignal.msg
+  FinishedSignal.msg
 )
 
 add_service_files(
