Describe how to export an project

--- a/UE4Project/Config/DefaultGame.ini
+++ b/UE4Project/Config/DefaultGame.ini
@@ -5,13 +5,13 @@ CompanyName=FS-Online
 Homepage="https://github.com/FS-Online/Driverless-Competition-Simulator"
 SupportContact="https://github.com/FS-Online/Driverless-Competition-Simulator/issues"
 LicensingTerms=GPL V2
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "8F8B6B2A472F9FDFB69E2B8CFAE8C4E0", "Blocks Environment for AirSim")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "F31D7C524A9E9BC66DD2AA922D309408", "Blocks Environment for AirSim")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "8F8B6B2A472F9FDFB69E2B8CFAE8C4E0", "Formula Student Driverless Simulator")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "F31D7C524A9E9BC66DD2AA922D309408", "Formula Student Driverless Simulator (debug)")
 CopyrightNotice=This program is free software; you can redistribute it and/ormodify it under the terms of the GNU General Public License as published by the Free Software Foundation
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 StagingDirectory=(Path="C:/temp")
 FullRebuild=True
 ForDistribution=False
@@ -44,3 +44,4 @@ bSkipEditorContent=False
 +MapsToCook=(FilePath="/Game/AirSimAssets")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
