--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Formula Student Driverless Simulator
 theme: readthedocs
+site_description: A virtual world where Autonomous Systems from different Formula Student teams can compete in time-trial challenges
 
 nav:
   - "Home": "README.md"
