--- a/settings.json
+++ b/settings.json
@@ -1,48 +1,83 @@
 {
-    "SeeDocsAt": "https://github.com/Microsoft/AirSim/blob/master/docs/settings.md",
-    "SettingsVersion": 1.2,
-    "SimMode": "Car",
-    "ViewMode": "SpringArmChase",
-    "ClockSpeed": 1.0,
-    "Vehicles": {
-      "FSCar": {
-        "VehicleType": "PhysXCar",
-        "DefaultVehicleState": "",
-        "EnableCollisionPassthrogh": false,
-        "EnableCollisions": true,
-        "AllowAPIAlways": true,
-        "RC":{
-            "RemoteControlID": -1
+  "SeeDocsAt": "https://github.com/Microsoft/AirSim/blob/master/docs/settings.md",
+  "SettingsVersion": 1.2,
+  "SimMode": "Car",
+  "ViewMode": "NoDisplay",
+  "ClockSpeed": 1.0,
+  "Vehicles": {
+    "FSCar": {
+      "VehicleType": "PhysXCar",
+      "DefaultVehicleState": "",
+      "EnableCollisionPassthrogh": false,
+      "EnableCollisions": true,
+      "AllowAPIAlways": true,
+      "RC": {
+        "RemoteControlID": -1
+      },
+      "Sensors": {
+        "Imu": {
+          "SensorType": 2,
+          "Enabled": true
         },
-        "Sensors": {
-          "Imu" : {
-            "SensorType": 2,
-            "Enabled": true
-          },
-          "Gps" : {
-            "SensorType": 3,
-            "Enabled": true
-          },
-          "LidarCustom": {
-            "SensorType": 6,
-            "Enabled": true,
-            "NumberOfChannels": 16,
-            "PointsPerSecond": 10000,
-            "X": 0,
-            "Y": 0,
-            "Z": -1,
-            "DrawDebugPoints": false
-          }
+        "Gps": {
+          "SensorType": 3,
+          "Enabled": true
         },
-        "Cameras": {
-
+        "LidarCustom": {
+          "SensorType": 6,
+          "Enabled": true,
+          "NumberOfChannels": 16,
+          "PointsPerSecond": 10000,
+          "X": 0,
+          "Y": 0,
+          "Z": -1,
+          "DrawDebugPoints": false
+        }
+      },
+      "Cameras": {
+        "cam1": {
+          "CaptureSettings": [
+            {
+              "PublishToRos": 1,
+              "ImageType": 0,
+              "Width": 785,
+              "Height": 785,
+              "FOV_Degrees": 90
+            }
+          ],
+          "X": 1.0,
+          "Y": 0.06,
+          "Z": -2.20,
+          "Pitch": 0.0,
+          "Roll": 0.0,
+          "Yaw": 180
         },
-        "X": 2, "Y": 0, "Z": 0,
-        "Pitch": 0, "Roll": 0, "Yaw": 0
-      }
-    },
-    "SubWindows": [
-    ]
-  }
-  
-  
+        "cam2": {
+          "CaptureSettings": [
+            {
+              "PublishToRos": 1,
+              "ImageType": 0,
+              "Width": 785,
+              "Height": 785,
+              "FOV_Degrees": 90
+            }
+          ],
+          "X": 1.0,
+          "Y": 0.06,
+          "Z": -2.20,
+          "Pitch": 0.0,
+          "Roll": 0.0,
+          "Yaw": 0.0
+        }
+      },
+      "X": 2,
+      "Y": 0,
+      "Z": 0,
+      "Pitch": 0,
+      "Roll": 0,
+      "Yaw": 0
+    }
+  },
+  "SubWindows": [
+  ]
+}
