Undo wrong changes and re-apply right changes

--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
   "SeeDocsAt": "https://github.com/Microsoft/AirSim/blob/master/docs/settings.md",
   "SettingsVersion": 1.2,
   "SimMode": "Car",
-  "ViewMode": "NoDisplay",
+  "ViewMode": "SpringArmChase",
   "ClockSpeed": 1.0,
   "Vehicles": {
     "FSCar": {
@@ -11,15 +11,15 @@
       "EnableCollisionPassthrogh": false,
       "EnableCollisions": true,
       "AllowAPIAlways": true,
-      "RC": {
-        "RemoteControlID": -1
+      "RC":{
+          "RemoteControlID": -1
       },
       "Sensors": {
-        "Imu": {
+        "Imu" : {
           "SensorType": 2,
           "Enabled": true
         },
-        "Gps": {
+        "Gps" : {
           "SensorType": 3,
           "Enabled": true
         },
@@ -35,47 +35,10 @@
         }
       },
       "Cameras": {
-        "cam1": {
-          "CaptureSettings": [
-            {
-              "PublishToRos": 1,
-              "ImageType": 0,
-              "Width": 785,
-              "Height": 785,
-              "FOV_Degrees": 90
-            }
-          ],
-          "X": 1.0,
-          "Y": 0.06,
-          "Z": -2.20,
-          "Pitch": 0.0,
-          "Roll": 0.0,
-          "Yaw": 180
-        },
-        "cam2": {
-          "CaptureSettings": [
-            {
-              "PublishToRos": 1,
-              "ImageType": 0,
-              "Width": 785,
-              "Height": 785,
-              "FOV_Degrees": 90
-            }
-          ],
-          "X": 1.0,
-          "Y": 0.06,
-          "Z": -2.20,
-          "Pitch": 0.0,
-          "Roll": 0.0,
-          "Yaw": 0.0
-        }
+
       },
-      "X": 2,
-      "Y": 0,
-      "Z": 0,
-      "Pitch": 0,
-      "Roll": 0,
-      "Yaw": 0
+      "X": 2, "Y": 0, "Z": 0,
+      "Pitch": 0, "Roll": 0, "Yaw": 0
     }
   },
   "SubWindows": [
