--- a/ros/src/fsds_ros_bridge/package.xml
+++ b/ros/src/fsds_ros_bridge/package.xml
@@ -19,6 +19,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>fs_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
 
   <!-- <exec_depend>nodelet</exec_depend> -->
