--- a/ros/src/fsds_ros_bridge/CMakeLists.txt
+++ b/ros/src/fsds_ros_bridge/CMakeLists.txt
@@ -38,6 +38,8 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(
   FILES
+  Track.msg
+  Cone.msg
   GPSYaw.msg
   ControlCommand.msg
   GoSignal.msg
