Use fs_msgs submodule for ROS messages (#100)
* add fsds submodule

* added --recurse-submodules flag

* removed methods that use GPSYaw and all rosbridge msg files

* use fs_msgs package

* use fsds with new track msgs

* fix docs links

* added documentation about what to do with the fs_msgs repo

* recurse submodules in github actions

--- a/ros/src/fsds_ros_bridge/CMakeLists.txt
+++ b/ros/src/fsds_ros_bridge/CMakeLists.txt
@@ -34,16 +34,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_srvs
   tf2
   tf2_ros
-)
-
-add_message_files(
-  FILES
-  Track.msg
-  Cone.msg
-  GPSYaw.msg
-  ControlCommand.msg
-  GoSignal.msg
-  FinishedSignal.msg
+  fs_msgs
 )
 
 add_service_files(
