--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ros/src/fs_msgs"]
 	path = ros/src/fs_msgs
-	url = git@github.com:FS-Online/fs_msgs.git
+	url = https://github.com/FS-Online/fs_msgs.git
