finished training map and fixed bug where cones were not being passed to the referee

--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/RaceCourse/Maps/IM_MAP1.IM_MAP1
+EditorStartupMap=/Game/TrainingMap.TrainingMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/RaceCourse/Maps/IM_MAP1.IM_MAP1
+GameDefaultMap=/Game/TrainingMap.TrainingMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/AirSim.AirSimGameMode
 GlobalDefaultServerGameMode=None
