--- a/ros/src/fsds_ros_bridge/package.xml
+++ b/ros/src/fsds_ros_bridge/package.xml
@@ -21,7 +21,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>fs_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-
+  <build_depend>tf</build_depend>
   <!-- <exec_depend>nodelet</exec_depend> -->
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>image_transport</exec_depend>
