Make client spectator controll the view through keybaord and mouse

--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -69,7 +69,8 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-bSupportsVulkan=True
+bSupportsVulkan=False
+bSupportsVulkanSM5=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=Default
