Some export fixes that make the packaged project work again

--- a/UE4Project/Config/DefaultGame.ini
+++ b/UE4Project/Config/DefaultGame.ini
@@ -11,19 +11,26 @@ CopyrightNotice=This program is free software; you can redistribute it and/ormod
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
-StagingDirectory=(Path="C:/temp")
+BuildConfiguration=PPBC_DebugGame
+BuildTarget=
+StagingDirectory=(Path="C:/Users/developer/Desktop/beta-4g")
 FullRebuild=True
-ForDistribution=False
-IncludeDebugFiles=False
+ForDistribution=True
+IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
-UsePakFile=True
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=False
+bUseIoStore=False
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
@@ -34,14 +41,35 @@ IncludeCrashReporter=False
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
-bCookAll=False
+LocalizationTargetCatchAllChunkId=0
+bCookAll=True
 bCookMapsOnly=False
 bCompressed=True
-bEncryptIniFiles=False
-bEncryptPakIndex=False
 bSkipEditorContent=False
-+MapsToCook=(FilePath="/Game/FlyingCPP/Maps/FlyingExampleMap")
-+MapsToCook=(FilePath="/Game/AirSimAssets")
-bNativizeBlueprintAssets=False
-bNativizeOnlySelectedBlueprints=False
+bSkipMovies=False
+-IniKeyBlacklist=KeyStorePassword
+-IniKeyBlacklist=KeyPassword
+-IniKeyBlacklist=rsa.privateexp
+-IniKeyBlacklist=rsa.modulus
+-IniKeyBlacklist=rsa.publicexp
+-IniKeyBlacklist=aes.key
+-IniKeyBlacklist=SigningPublicExponent
+-IniKeyBlacklist=SigningModulus
+-IniKeyBlacklist=SigningPrivateExponent
+-IniKeyBlacklist=EncryptionKey
+-IniKeyBlacklist=IniKeyBlacklist
+-IniKeyBlacklist=IniSectionBlacklist
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/TrainingMap")
 
