--- a/settings.json
+++ b/settings.json
@@ -27,15 +27,19 @@
           "SensorType": 3,
           "Enabled": true
         },
-        "LidarCustom": {
+        "Lidar1": {
           "SensorType": 6,
           "Enabled": true,
-          "NumberOfChannels": 16,
-          "PointsPerSecond": 10000,
-          "X": 0,
-          "Y": 0,
-          "Z": -1,
-          "DrawDebugPoints": false
+          "X": 0, "Y": 0, "Z": -1,
+          "Roll": 0, "Pitch": 0, "Yaw" : 0,
+          "NumberOfLasers": 4,
+          "PointsPerScan": 4096,
+          "VerticalFOVUpper": 5,
+          "VerticalFOVLower": -5,
+          "HorizontalFOVStart": -90,
+          "HorizontalFOVEnd": 90,
+          "RotationsPerSecond": 20,
+          "DrawDebugPoints": true
         }
       },
       "Cameras": {
