--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -5,11 +5,15 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TrainingMap.TrainingMap
+GameInstanceClass=/AirSim/DisconnectGameInstance.DisconnectGameInstance_C
+GameDefaultMap=/AirSim/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/AirSim.AirSimGameMode
 GlobalDefaultServerGameMode=None
+
+
+[/Script/OnlineSubsystemUtils.IpNetDriver] 
+ConnectionTimeout=10.0
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
