Remove bitmap_image.hpp helper class and removed unused physics body classes

--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -63,10 +63,10 @@ bDisableActiveActors=False
 bDisableCCD=False
 bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-bSubsteppingAsync=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
+bSubstepping=True
+bSubsteppingAsync=True
+MaxSubstepDeltaTime=0.001300
+MaxSubsteps=10
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
