High tickrate v1 working

--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -24,6 +24,7 @@ MinimumiOSVersion=IOS_11
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Flying",NewGameName="/Script/Blocks")
 +ActiveClassRedirects=(OldClassName="TP_FlyingPawn",NewClassName="BlocksPawn")
 +ActiveClassRedirects=(OldClassName="TP_FlyingGameMode",NewClassName="BlocksGameMode")
+bUseFixedFrameRate=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -63,10 +64,10 @@ bDisableActiveActors=False
 bDisableCCD=False
 bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-bSubsteppingAsync=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
+bSubstepping=True
+bSubsteppingAsync=True
+MaxSubstepDeltaTime=0.010000
+MaxSubsteps=10
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
