Do not start AirSimGamemode in main menu (in turn, spectator no longer needs settings.json), load settings.json on initgame so that it is always loaded (fixes #192), fix reference to GameInstance

--- a/UE4Project/Config/DefaultEngine.ini
+++ b/UE4Project/Config/DefaultEngine.ini
@@ -5,10 +5,10 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/AirSim/DisconnectGameInstance.DisconnectGameInstance_C
+GameInstanceClass=/AirSim/Blueprints/AirsimGameInstance.AirsimGameInstance_C
 GameDefaultMap=/AirSim/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/AirSim.AirSimGameMode
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 
 
