Change package settings to have smaller packaged game

--- a/UE4Project/Config/DefaultGame.ini
+++ b/UE4Project/Config/DefaultGame.ini
@@ -11,16 +11,16 @@ CopyrightNotice=This program is free software; you can redistribute it and/ormod
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_DebugGame
+BuildConfiguration=PPBC_Test
 BuildTarget=
 StagingDirectory=(Path="C:/Users/developer/Desktop/beta-4g")
 FullRebuild=True
 ForDistribution=True
-IncludeDebugFiles=True
+IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=False
+UsePakFile=True
 bUseIoStore=False
 bGenerateChunks=False
 bGenerateNoChunks=False
@@ -45,7 +45,7 @@ LocalizationTargetCatchAllChunkId=0
 bCookAll=True
 bCookMapsOnly=False
 bCompressed=True
-bSkipEditorContent=False
+bSkipEditorContent=True
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
