--- a/AirSim/UnrealPluginFiles.vcxproj
+++ b/AirSim/UnrealPluginFiles.vcxproj
@@ -82,7 +82,7 @@
     <ClCompile Include="unreal\plugins\airsim\source\multirotor\FlyingPawn.cpp" />
     <ClCompile Include="Unreal\Plugins\AirSim\Source\Multirotor\MultirotorSimApi.cpp" />
     <ClCompile Include="Unreal\Plugins\AirSim\Source\Multirotor\SimModeWorldMultirotor.cpp" />
-    <ClCompile Include="unreal\plugins\airsim\source\NedTransform.cpp" />
+    <ClCompile Include="unreal\plugins\airsim\source\CoordFrameTransformer.cpp" />
     <ClCompile Include="unreal\plugins\airsim\source\PIPCamera.cpp" />
     <ClCompile Include="unreal\plugins\airsim\source\RenderRequest.cpp" />
     <ClCompile Include="unreal\plugins\airsim\source\simhud\SimHUD.cpp" />
@@ -114,7 +114,7 @@
     <ClInclude Include="unreal\plugins\airsim\source\multirotor\MultiRotorConnector.h" />
     <ClInclude Include="Unreal\Plugins\AirSim\Source\Multirotor\MultirotorSimApi.h" />
     <ClInclude Include="unreal\plugins\airsim\source\multirotor\SimModeWorldMultiRotor.h" />
-    <ClInclude Include="unreal\plugins\airsim\source\NedTransform.h" />
+    <ClInclude Include="unreal\plugins\airsim\source\CoordFrameTransformer.h" />
     <ClInclude Include="unreal\plugins\airsim\source\PIPCamera.h" />
     <ClInclude Include="unreal\plugins\airsim\source\RenderRequest.h" />
     <ClInclude Include="unreal\plugins\airsim\source\simhud\SimHUD.h" />
